<?xml version="1.0"?>
<package>
  <name>rrt_sharp</name>
  <version>0.0.0</version>
  <description>RRT Sharp</description>

  <maintainer email="mmaulimo@andrew.cmu.edu">Mukhtar Maulimov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
